<resources>
    <string name="app_name">Sample Androidapp</string>
    <string name="login_in">login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">login_btn</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_login_with">Or Login With</string>
    <string name="facebook">Facebook</string>
    <string name="linkdin">Linkdin</string>
    <string name="github">Github</string>
    <string name="hello_user">Hello User</string>
    <string name="getdata">Get Data</string>
    <string name="Login">Login</string>
    <string name="Login_text">LOGIN</string>
    <string name="data">Data:</string>
    <string name="register">Register</string>
    <string name="create_password">Create Password</string>
    <string name="create_username">Create Username</string>
    <string name="home">Home</string>
    <string name="details">Details</string>
    <string name="location">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_frangment">Home Frangment</string>
    <string name="details_frangment">Details Frangment</string>
    <string name="location_frangment">Location Frangment</string>
    <string name="Hello_User">Hello User</string>
    <string name="know_your_details">Know your Details</string>
    <string name="locate_me">Locate Me</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="title">title</string>
    <string name="message">Message</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="settings">Settings</string>
    <string name="broadcast">Broadcast</string>
    <string name="welcome_to_broadcast">Welcome to Broadcast</string>
    <string name="send_broadcast">Send Broadcast</string>
    <string name="broadcasts">Broadcasts</string>
    <string name="received_data">Received Data:</string>
    <string name="sendbroadcast">Send Broadcast</string>
    <string name="received_message">receivedmessage</string>
    <string name="welcometobroadcast">Welcome TO Broadcast</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="service">Service</string>
    <string name="services">Services</string>
    <string name="Services">Services</string>
    <string name="storage">storage</string>
    <string name="Storage">Storage</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="Settings">Settings</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="delete">Delete</string>
    <string name="edit">edit</string>
    <string name="add">add</string>
    <string name="play_music">Play Music</string>
    <string name="stop_music">Stop Music</string>
    <string name="edit_information">Edit Information</string>
    <string name="know_the_details">know_the_details</string>
    <string name="Know_the_details">Know The Details</string>
    <string name="add_information">Add Information</string>
    <string name="camera">Camera</string>
    <string name="take_picture">Take Picture</string>
    <string name="Camera">Camera</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="image">Image</string>
    <string name="Photo">Take a photo</string>
    <string name="Image">Image</string>
    <string name="api">API</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_job">Enter Job</string>
    <string name="send_post_request">Send POST Request</string>
    <string name="output">Output :</string>
    <string name="post_api">Post Api</string>
    <string name="play_another_service">Play Another service</string>
    <string name="toggle_music">Toggle Music</string>
    <string name="start_music">Start Music</string>
    <string name="Stop_music">Stop Music</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="google_maps">Google Maps</string>
    <string name="other_options">Other Options</string>
    <string name="update_request">Update Request</string>
    <string name="get_data">Get Data</string>
    <string name="post_data">Post Data</string>
    <string name="update_data">Update Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="enter_id">enter id</string>
    <string name="enter_user_id">enter user id</string>
    <string name="submit">submit</string>
    <string name="enter_body">enter body</string>
    <string name="enter_title">enter title</string>
    <string name="otp">OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="sms">sms</string>
    <string name="note_password_must_contain_at_least_one_uppercase_letter_one_digit_one_special_character_and_be_at_least_8_characters_long_example_roshan_123">Note: Password must contain at least one uppercase letter one digit one special character and be at least 8 characters long : Example - Roshan@123</string>
    <string name="note_username_must_start_with_an_uppercase_letter_contain_at_least_one_digit_and_be_at_least_8_characters_long_example_roshan23">Note: Username must start with an uppercase letter contain at least one digit and be at least 8 characters long : Example - Roshan23</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="swipe_left_for_other_views"><![CDATA[<- swipe left for other views]]></string>
    <string name="notification">Notification</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="send_notification">Send Notification</string>
    <string name="Notification">Notification</string>
    <string name="send_notifications">Send Notifications</string>
    <string name="msg_token_fmt">message</string>
    <string name="Name">Name</string>
    <string name="device_notification_using_firebase">Device Notification using Firebase</string>
    <string name="Service">Service</string>
    <string name="help">help box</string>


</resources>