<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3CCE1"
    tools:context=".activity.BackgroundActivity">



  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_4dp"
        android:textStyle="italic"
      android:text="@string/swipe_left_for_other_views"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:layout_marginTop="@dimen/_30dp"
        android:gravity="center"
        android:textSize="@dimen/_30sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Startservice"
        android:layout_width="@dimen/_200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:textSize="@dimen/_12sp"
        android:text="@string/play_music"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Stopservice"
        android:layout_width="@dimen/_200dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sp"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/stop_music"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/Startservice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Playservice"
        android:layout_width="@dimen/_200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/play_another_service"
        android:textSize="@dimen/_12sp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/Stopservice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>


  <com.google.android.material.navigation.NavigationView
      android:id="@+id/nav_view"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      app:headerLayout="@layout/nav_header"
      app:menu="@menu/nav_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
