<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".activity.OTPActivity">

    <ImageView
        android:src="@drawable/mobile_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100dp"
        android:layout_marginBottom="@dimen/_50dp"
        android:contentDescription="@string/sms" />

    <TextView
        android:textSize="@dimen/_25sp"
        android:layout_margin="@dimen/_10dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:padding="@dimen/_10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/otp_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editText_otp"
        android:layout_margin="@dimen/_10dp"
        android:gravity="center"
        android:padding="@dimen/_15dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:background="#FBC02D"
        android:hint="@string/enter_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="otp"
        android:inputType="text" />


</LinearLayout>