<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg"
        android:gravity="center"
        tools:context=".activity.MainActivity">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_140dp"
            android:background="@drawable/login_shape"
            android:text="@string/Login_text"
            android:textSize="@dimen/_34sp"
            android:textColor="#F1AD05"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_38dp"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/username_icon"
            android:hint="@string/enter_username"
            android:textColor="#FFEB3B"
            android:textColorHint="#FFEB3B"
            android:gravity="center"
            android:textSize="@dimen/_20sp"
            android:padding="@dimen/_18dp"
            android:inputType="text"
            android:layout_marginEnd="@dimen/_50dp"
            android:layout_marginStart="@dimen/_50dp"
            app:layout_constraintTop_toBottomOf="@+id/title_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="user" />

        <EditText
            android:id="@+id/passsword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18dp"
            android:layout_marginStart="@dimen/_50dp"
            android:layout_marginEnd="@dimen/_50dp"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/password_icon"
            android:hint="@string/enter_password"
            android:textColor="#FFEB3B"
            android:textColorHint="#FFEB3B"
            android:gravity="center"
            android:textSize="@dimen/_20sp"
            android:padding="@dimen/_18dp"
            android:inputType="textPassword"
            android:autofillHints="Password"
            app:layout_constraintTop_toBottomOf="@+id/username_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_39dp"
            android:text="@string/Login"
            android:layout_marginStart="@dimen/_50dp"
            android:layout_marginEnd="@dimen/_50dp"
            android:backgroundTint="#FFA500"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            android:padding="@dimen/_18dp"
            app:layout_constraintTop_toBottomOf="@+id/passsword_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/remember_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/divider_view"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="#D1084D"
            app:layout_constraintTop_toBottomOf="@+id/remember_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/sign_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/sign_up"
            android:textSize="@dimen/_22sp"
            android:layout_marginStart="@dimen/_50dp"
            android:layout_marginEnd="@dimen/_50dp"
            android:background="@drawable/rounded_corner"
            app:layout_constraintTop_toBottomOf="@+id/divider_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/or_login_textview"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_60dp"
            android:layout_marginTop="@dimen/_25dp"
            android:text="@string/or_login_with"
            android:textSize="@dimen/_20sp"
            android:textStyle="italic"
            android:gravity="center"
            android:textColor="#34033C"
            app:layout_constraintTop_toBottomOf="@+id/sign_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/or_login_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/facebook_btn"
                android:layout_width="@dimen/_64dp"
                android:layout_height="@dimen/_64dp"
                android:layout_marginStart="@dimen/_10dp"
                android:contentDescription="@string/facebook"
                android:scaleType="fitCenter"
                android:src="@drawable/facebook" />

            <ImageButton
                android:id="@+id/linkdin_btn"
                android:layout_width="@dimen/_64dp"
                android:layout_height="@dimen/_65dp"
                android:layout_marginStart="@dimen/_50dp"
                android:contentDescription="@string/linkdin"
                android:scaleType="fitCenter"
                android:src="@drawable/linkdin" />

            <ImageButton
                android:id="@+id/github_btn"
                android:layout_width="@dimen/_64dp"
                android:layout_height="@dimen/_64dp"
                android:layout_marginStart="@dimen/_60dp"
                android:contentDescription="@string/github"
                android:scaleType="fitCenter"
                android:src="@drawable/github" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
